[gd_scene load_steps=7 format=3 uid="uid://csqypv8t0x51y"]

[ext_resource type="Script" path="res://classes/Player/player.gd" id="1_wgw2y"]
[ext_resource type="PackedScene" uid="uid://b2qq7d7hxug4d" path="res://classes/Player/PlayerCharacter/player_character.tscn" id="2_i4dl7"]
[ext_resource type="PackedScene" uid="uid://8jk1g4xtk0lk" path="res://classes/Player/InputSprite/input_sprite.tscn" id="3_dubpo"]

[sub_resource type="Animation" id="Animation_sbvuv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExhaustProgressBar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExhaustProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ks2dh"]
resource_name = "exhausted"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExhaustProgressBar:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1e-05, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExhaustProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.399, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 2,
"values": [0.0, 100.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3lxh"]
_data = {
"RESET": SubResource("Animation_sbvuv"),
"exhausted": SubResource("Animation_ks2dh")
}

[node name="Player" type="Node2D"]
script = ExtResource("1_wgw2y")

[node name="PlayerCharacter" parent="." instance=ExtResource("2_i4dl7")]

[node name="ExhaustProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -39.0
offset_top = -27.0
offset_right = 40.0
offset_bottom = -15.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.75
libraries = {
"": SubResource("AnimationLibrary_j3lxh")
}

[node name="InputSprite" parent="." instance=ExtResource("3_dubpo")]

[node name="UnitSpawnPosition" type="Marker2D" parent="."]
position = Vector2(40, -80)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
